@@ -18,9 +18,11 @@
 package org.killbill.billing.beatrix.integration;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import org.joda.time.LocalDate;
@@ -34,19 +36,15 @@ import org.killbill.billing.entitlement.api.Subscription;
 import org.killbill.billing.entitlement.api.SubscriptionEvent;
 import org.killbill.billing.invoice.api.Invoice;
 import org.killbill.billing.invoice.api.InvoiceItemType;
-import org.killbill.billing.payment.api.PluginProperty;
 import org.killbill.billing.platform.api.KillbillConfigSource;
 import org.testng.Assert;
 import org.testng.annotations.Test;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 
 public class TestCatalogWithEvents extends TestIntegrationBase {
 
     @Override
     protected KillbillConfigSource getConfigSource(final Map<String, String> extraProperties) {
-        final Map<String, String> allExtraProperties = new HashMap<String, String>(extraProperties);
+        final Map<String, String> allExtraProperties = new HashMap<>(extraProperties);
         allExtraProperties.put("org.killbill.catalog.uri", "catalogs/testCatalogWithEvents");
         return super.getConfigSource(null, allExtraProperties);
     }
@@ -64,7 +62,7 @@ public class TestCatalogWithEvents extends TestIntegrationBase {
 
         final PlanPhaseSpecifier spec = new PlanPhaseSpecifier("water-monthly", null);
         busHandler.pushExpectedEvents(NextEvent.CREATE, NextEvent.BLOCK, NextEvent.NULL_INVOICE);
-        final UUID subscriptionId = entitlementApi.createBaseEntitlement(account.getId(), new DefaultEntitlementSpecifier(spec, null, null, null), UUID.randomUUID().toString(), clock.getUTCToday(), clock.getUTCToday(), false, true, ImmutableList.<PluginProperty>of(), callContext);
+        final UUID subscriptionId = entitlementApi.createBaseEntitlement(account.getId(), new DefaultEntitlementSpecifier(spec, null, null, null), UUID.randomUUID().toString(), clock.getUTCToday(), clock.getUTCToday(), false, true, Collections.emptyList(), callContext);
         assertListenerStatus();
 
         recordUsageData(subscriptionId, "t1", "liter", new LocalDate(2020, 1, 1), BigDecimal.valueOf(10L), callContext);
@@ -77,7 +75,7 @@ public class TestCatalogWithEvents extends TestIntegrationBase {
 
         final Invoice invoice1 = invoiceChecker.checkInvoice(account.getId(), 1, callContext,
                                                              new ExpectedInvoiceItemCheck(new LocalDate(2020, 1, 1), new LocalDate(2020, 2, 1), InvoiceItemType.USAGE, new BigDecimal("30.00")));
-        invoiceChecker.checkTrackingIds(invoice1, ImmutableSet.of("t1", "t2"), internalCallContext);
+        invoiceChecker.checkTrackingIds(invoice1, Set.of("t1", "t2"), internalCallContext);
 
 
         Assert.assertTrue(invoice1.getInvoiceItems().get(0).getCatalogEffectiveDate().toDate().compareTo(catalog.getVersions().get(0).getEffectiveDate()) == 0);
@@ -91,7 +89,7 @@ public class TestCatalogWithEvents extends TestIntegrationBase {
         clock.addDays(15);
 
         busHandler.pushExpectedEvents(NextEvent.CHANGE, NextEvent.INVOICE);
-        subscription1.changePlanWithDate(new DefaultEntitlementSpecifier(spec),  clock.getUTCToday(), ImmutableList.<PluginProperty>of(), callContext);
+        subscription1.changePlanWithDate(new DefaultEntitlementSpecifier(spec),  clock.getUTCToday(), Collections.emptyList(), callContext);
         assertListenerStatus();
 
         final Subscription subscription2 = subscriptionApi.getSubscriptionForEntitlementId(subscriptionId, callContext);
@@ -109,7 +107,7 @@ public class TestCatalogWithEvents extends TestIntegrationBase {
         clock.addDays(15);
 
         busHandler.pushExpectedEvents(NextEvent.CHANGE, NextEvent.INVOICE);
-        subscription1.changePlanWithDate(new DefaultEntitlementSpecifier(spec),  clock.getUTCToday(), ImmutableList.<PluginProperty>of(), callContext);
+        subscription1.changePlanWithDate(new DefaultEntitlementSpecifier(spec),  clock.getUTCToday(), Collections.emptyList(), callContext);
         assertListenerStatus();
 
 
